-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
After -XX:+EnableValhalla is turned on by default, javac fails if C1 is enabled. E.g.:
# C1 is disabled by default
$ javac -J-Xcomp -version
javac 13-internal
# Enable C1 explicitly
$ javac -J-XX:+EnableValhallaC1 -J-Xcomp -version
Exception in thread "main" java.lang.NullPointerException
at java.base/java.util.ResourceBundle.getBundleImpl(ResourceBundle.java:1671)
at java.base/java.util.ResourceBundle.getBundleImpl(ResourceBundle.java:1582)
at java.base/java.util.ResourceBundle.getBundleImpl(ResourceBundle.java:1556)
at java.base/java.util.ResourceBundle.getBundle(ResourceBundle.java:932)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.lambda$add$0(JavacMessages.java:121)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.getBundles(JavacMessages.java:140)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.setCurrentLocale(JavacMessages.java:80)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.<init>(JavacMessages.java:112)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.<init>(JavacMessages.java:89)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.instance(JavacMessages.java:58)
at jdk.compiler/com.sun.tools.javac.util.JCDiagnostic$Factory.<init>(JCDiagnostic.java:71)
at jdk.compiler/com.sun.tools.javac.util.JCDiagnostic$Factory.instance(JCDiagnostic.java:61)
at jdk.compiler/com.sun.tools.javac.util.Log.<init>(Log.java:353)
at jdk.compiler/com.sun.tools.javac.util.Log.<init>(Log.java:256)
at jdk.compiler/com.sun.tools.javac.util.Log.instance(Log.java:236)
at jdk.compiler/com.sun.tools.javac.main.Main.compile(Main.java:203)
at jdk.compiler/com.sun.tools.javac.main.Main.compile(Main.java:176)
at jdk.compiler/com.sun.tools.javac.Main.compile(Main.java:57)
at jdk.compiler/com.sun.tools.javac.Main.main(Main.java:43)
# C1 is disabled by default
$ javac -J-Xcomp -version
javac 13-internal
# Enable C1 explicitly
$ javac -J-XX:+EnableValhallaC1 -J-Xcomp -version
Exception in thread "main" java.lang.NullPointerException
at java.base/java.util.ResourceBundle.getBundleImpl(ResourceBundle.java:1671)
at java.base/java.util.ResourceBundle.getBundleImpl(ResourceBundle.java:1582)
at java.base/java.util.ResourceBundle.getBundleImpl(ResourceBundle.java:1556)
at java.base/java.util.ResourceBundle.getBundle(ResourceBundle.java:932)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.lambda$add$0(JavacMessages.java:121)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.getBundles(JavacMessages.java:140)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.setCurrentLocale(JavacMessages.java:80)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.<init>(JavacMessages.java:112)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.<init>(JavacMessages.java:89)
at jdk.compiler/com.sun.tools.javac.util.JavacMessages.instance(JavacMessages.java:58)
at jdk.compiler/com.sun.tools.javac.util.JCDiagnostic$Factory.<init>(JCDiagnostic.java:71)
at jdk.compiler/com.sun.tools.javac.util.JCDiagnostic$Factory.instance(JCDiagnostic.java:61)
at jdk.compiler/com.sun.tools.javac.util.Log.<init>(Log.java:353)
at jdk.compiler/com.sun.tools.javac.util.Log.<init>(Log.java:256)
at jdk.compiler/com.sun.tools.javac.util.Log.instance(Log.java:236)
at jdk.compiler/com.sun.tools.javac.main.Main.compile(Main.java:203)
at jdk.compiler/com.sun.tools.javac.main.Main.compile(Main.java:176)
at jdk.compiler/com.sun.tools.javac.Main.compile(Main.java:57)
at jdk.compiler/com.sun.tools.javac.Main.main(Main.java:43)
- relates to
-
JDK-8257674 [lworld] C1's substitutability check does not respect UseCompressedClassPointers
-
- Resolved
-
-
JDK-8226467 [lworld] C1 support for inline types
-
- Closed
-
-
JDK-8205030 [lworld] C1 support for value types
-
- Resolved
-