8226465: [lworld][c1] javac fails if C1 is enabled

Reviewed-by: thartmann